--- a/QuickChat/Info.plist
+++ b/QuickChat/Info.plist
@@ -6,6 +6,8 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>localhost</key>
+			<string></string>
 			<key>karloscoverage.com</key>
 			<string></string>
 		</dict>
